Scrollbar(unten) gefixt, Datepickerclipping gefixt. Bug hinzugefuegt, beim 'to' Datepicker.

--- a/src/components/ChartMenu.css
+++ b/src/components/ChartMenu.css
@@ -1,4 +1,3 @@
-
 .slidecontainer {
     width: 100%;
     display: flex;
@@ -7,6 +6,7 @@
     align-items: center;
     align-content: center;
     background: radial-gradient(circle, rgb(36, 36, 36) 0%, rgb(15, 15, 15) 50%, rgba(0,0,0,1) 100%);
+    overflow: hidden;
 }
 .centering{
     margin-top: 50px;
